# badsign

./: .gitignore  Makefile  PROJECT_STATUS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
badsign/: __init__.py  capa_parser.py  cli.py  core.py  exceptions.py  yara_generator.py
docs/: CAPA_TO_YARA.md
examples/: basic_usage.py  capa_to_yara_example.py  ransomware_sample.yar
tests/: __init__.py  test_capa_to_yara.py  test_core.py
