[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "badsign"
version = "0.1.0"
description = "Generating signatures for bad stuff, period."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "DFIR Community"}
]
keywords = ["malware", "signatures", "yara", "clamav", "antivirus", "security", "detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pefile>=2023.2.7",
    "click>=8.0.0",
    "lief>=0.13.0",  # Cross-platform binary parsing (PE, ELF, Mach-O)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "pylint>=2.15.0",
    "black>=22.0.0",
]
yara = [
    "plyara>=2.1.0",  # For YARA parsing
]
capa = [
    # For future capa integration
]

[project.scripts]
badsign = "badsign.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/badsign"
Repository = "https://github.com/yourusername/badsign"
Issues = "https://github.com/yourusername/badsign/issues"

[tool.setuptools.packages.find]
include = ["badsign*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pylint.messages_control]
max-line-length = 100
